// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches snapshot default variant 1`] = `
<DocumentFragment>
  <div
    class="aje-input has-error"
  >
    <label
      class="aje-label"
      for="TextInput-:r0:-input"
    >
      Text Label
    </label>
    <p
      class="aje-label--message"
    >
      message
    </p>
    <input
      aria-describedby="TextInput-:r0:-error"
      id="TextInput-:r0:-input"
      placeholder="placeholder"
      type="text"
      value="content"
    />
    <p
      class="aje-label--error"
      id="TextInput-:r0:-error"
    >
      some error
    </p>
  </div>
</DocumentFragment>
`;

exports[`matches snapshot floating variant 1`] = `
<DocumentFragment>
  <div
    class="aje-input--floating has-error"
  >
    <div
      class="aje-input__container"
    >
      <input
        aria-describedby="TextInput-:r1:-error"
        id="TextInput-:r1:-input"
        placeholder="placeholder"
        type="text"
        value="content"
      />
      <label
        class=""
        for="TextInput-:r1:-input"
      >
        Text Label
      </label>
    </div>
    <p
      class="aje-label--message"
    >
      message
    </p>
    <p
      class="aje-label--error"
      id="TextInput-:r1:-error"
    >
      some error
    </p>
  </div>
</DocumentFragment>
`;
